--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
       <div id="principal-box">
   
         <div class="imaginary-box">
-          <img class="img-chanel" src="./images/image-product-mobile.jpg" alt="">
+          <img class="img-chanel-mobile" src="./images/image-product-mobile.jpg" alt="">
+          <img class="img-chanel-desktop" src="./images/image-product-desktop.jpg" alt="">
           
           <div class="white-box">
             <div id="perfume"><h3 id="text-perfume">PERFUME</h3></div>
